Fixed bug with team names wrapping on game intro

--- a/web/.resources/fbDisplay/gi.css
+++ b/web/.resources/fbDisplay/gi.css
@@ -48,6 +48,7 @@
     text-transform: uppercase;
     font-size: 45px;
     color: #fff;
+    text-wrap: nowrap;
   }
   
   #away-desc {
